telepathy-qt (0.9.3-3) UNRELEASED; urgency=low

  * Remove version requirement from pkg-config dependency (Closes: #734489)
  * Update Standards-Version to 3.9.5. No Changes needed.
  * Update debian/libtelepathy-qt4-2.symbols for 0.9.3 symbols.

 -- Diane Trout <diane@ghic.org>  Sun, 12 Jan 2014 11:09:28 -0800

telepathy-qt (0.9.3-2) unstable; urgency=low

  * Add fix_storing_avatars.patch. Fixes issue storing avatars
    multiple times.
  * Remove python compiled byte-code during debian auto_clean target.
  * Add create_moc_command.patch to work around a change in a recent
    cmake macro. (Closes: #728675)

 -- Diane Trout <diane@ghic.org>  Wed, 27 Nov 2013 08:49:05 -0800

telepathy-qt (0.9.3-1) unstable; urgency=low

  * Team upload.

  [ Diane Trout ]
  * New upstream release.
  * Bump libfarstream-0.1-dev, libtelepathy-farstream-dev,
         libtelepathy-glib-dev dependencies.
  * Remove fix_ftbfs_gcc47.patch applied upstream.
  * Update libtelepathy-qt4-2.symbols.
  * Remove git-buildpackage directory configuration options.
  * Remove uneeded shlib:Depends from libtelepathy-qt4-dev control .
  * Refresh patches.
  * Add patch link-against-gobject.patch to provide g_object symbols
    used by libtelepathy-qt4-farstream.
  * Add myself to Uploaders.
  * Update Vcs-* fields to canonical URIs.
  * Update Standards-Version: 3.9.4. No changes needed.
  * Add Multi-Arch: same to libtelepathy-qt4-dbg.

  [ Michał Zając ]
  * Drop fvisibility-inlines-hidden.patch - went upstream
  * Change the Maintainer, ACKed by Simon McVittie:
    - Change the Maintainers field to the KDE extras team.
    - Update the Uploaders.
  * Update symbols file
  * Updated Vcs-* fields

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove upstream stuff from the repo. We are going to keep only debian/ on
    it.
  * Update symbols file with current amd64 build.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 05 Jul 2013 17:48:44 -0300
